[project]
name = "oracle-fusion-docs-mcp"
version = "1.0.0"
description = "MCP server for instant search across Oracle Fusion Cloud documentation (HCM, ERP, EPM, SCM, CX). Zero maintenance, always up-to-date."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Simon Kreis-Richard", email = "simon.kreis-richard@ibm.com"}
]
keywords = ["oracle", "fusion", "hcm", "erp", "epm", "mcp", "documentation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Documentation",
]

requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31",
]

[project.scripts]
oracle-fusion-docs-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
# For uvx: uvx oracle-fusion-docs-mcp
package = true
