[project]
name = "oracle-fusion-docs-mcp"
version = "2.0.0"
description = "MCP server for instant search across Oracle Fusion Cloud documentation (HCM, ERP, EPM, SCM, CX, Projects). 300+ topics. Zero maintenance. Always up-to-date."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Simon Kreis-Richard"}
]
keywords = ["oracle", "fusion", "hcm", "erp", "epm", "scm", "mcp", "documentation", "ai-agent"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Documentation",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "tenacity>=8.0.0",
]

[project.scripts]
oracle-fusion-docs-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
# For uvx: uvx oracle-fusion-docs-mcp
package = true
